<resources>
    <string name="app_name">Authenticator</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="aas_token">AAS Token</string>
    <string name="auth_token">Auth Token</string>
    <string name="success">Success</string>
    <string name="failed">Failed!!</string>
    <string name="toast_spoof_applied">Simulación de dispositivo aplicada con éxito.</string>
    <string name="toast_permission_granted">Permiso concedido</string>
    <string name="toast_developer_setting_failed">No se ha podido abrir las opciones para desarrolladores, asegúrese de que está activada desde los ajustes del dispositivo.</string>
    <string name="toast_clipboard_copied">Copiado al portapapeles</string>
    <string name="toast_apk_whitelisted">En la lista blanca</string>
    <string name="toast_apk_copy_success">APK exportado con éxito</string>
    <string name="toast_apk_copy_failed">Fallo en la exportación del APK</string>
    <string name="toast_apk_blacklisted">En la lista negra</string>
    <string name="toast_anonymous_restriction">No disponible en cuentas anónimas</string>
    <string name="toast_abandon_sessions">Instalación de sesiones antiguas abandonadas</string>
    <string name="title_updates">Actualizaciones</string>
    <string name="title_spoof_manager">Gestor de simulación</string>
    <string name="title_settings">Ajustes</string>
    <string name="title_purchase_history">Historial de compras</string>
    <string name="title_no_network">Sin conexión</string>
    <string name="title_library">Biblioteca</string>
    <string name="title_language">Idioma</string>
    <string name="title_installer">Instalador de apps</string>
    <string name="title_installed">Instalado</string>
    <string name="title_installation">Instalación</string>
    <string name="title_games">Juegos</string>
    <string name="title_download_playstore">Play Store</string>
    <string name="title_download_manager">Descargas</string>
    <string name="title_device">Dispositivo</string>
    <string name="title_details">Detalles</string>
    <string name="title_blacklist_manager">Gestor de la lista negra</string>
    <string name="title_apps_sale">Apps en oferta</string>
    <string name="title_apps_library">Apps en la biblioteca</string>
    <string name="title_apps_games">Mis apps y juegos</string>
    <string name="title_apps">Apps</string>
    <string name="title_account_manager">Cuentas</string>
    <string name="title_about">Acerca de</string>
    <string name="tab_trending">Tendencias</string>
    <string name="tab_top_paid">Top en ventas</string>
    <string name="tab_top_grossing">Top en ingresos</string>
    <string name="tab_top_free">Top gratis</string>
    <string name="tab_top_charts">Ranking top</string>
    <string name="tab_for_you">Para usted</string>
    <string name="tab_editor_choice">Selección de los editores</string>
    <string name="tab_categories">Categorías</string>
    <string name="spoof_apply">Asegúrase de volver a iniciar sesión para aplicar la simulación</string>
    <string name="purchase_no_file">No se pueden obtener los archivos</string>
    <string name="purchase_invalid">App no adquirida</string>
    <string name="purchase_failed">Descarga fallida</string>
    <string name="pref_ui_title">Personalización</string>
    <string name="pref_ui_theme_title">Tema</string>
    <string name="pref_ui_theme_system">Seguir al sistema</string>
    <string name="pref_ui_theme_light">Claro</string>
    <string name="pref_ui_theme_darkord">Disskord</string>
    <string name="pref_ui_theme_dark_x">Oscuro X</string>
    <string name="pref_ui_theme_dark">Oscuro</string>
    <string name="pref_ui_theme_black">Negro</string>
    <string name="pref_ui_accent_title">Acento</string>
    <string name="pref_install_profile_title">Perfiles de instalación (experimental)</string>
    <string name="pref_install_profile_summary">Seleccione el perfil de destino para instalar las aplicaciones. Sólo funciona con el método de instalación root</string>
    <string name="pref_install_mode_title">Método de instalación</string>
    <string name="pref_install_mode_summary">Seleccione el modo de instalación del APK</string>
    <string name="pref_install_mode_session">Instalador de sesión</string>
    <string name="pref_install_mode_services">Servicios de Aurora</string>
    <string name="pref_install_mode_root">Instalador root</string>
    <string name="pref_install_mode_native">Instalador nativo</string>
    <string name="pref_install_delete_title">Eliminar el APK después de la instalación</string>
    <string name="pref_install_delete_summary">Los APKs se eliminan por defecto</string>
    <string name="pref_install_auto_title">Instalar automáticamente los APKs después de la descarga</string>
    <string name="pref_install_auto_summary">Las apps se instalan al instante una vez finalizada la descarga</string>
    <string name="pref_filter_google_title">Filtrar las apps de Google</string>
    <string name="pref_filter_google_summary">Elimina todas las aplicaciones de Google de los resultados de búsqueda y de las categorías de aplicaciones</string>
    <string name="pref_filter_fdroid_title">Filtrar las apps de F-Droid</string>
    <string name="pref_filter_fdroid_summary">Elimina las aplicaciones de F-Droid de las listas de apps</string>
    <string name="pref_downloader_external_desc">El almacenamiento externo se utilizará para las descargas, las exportaciones, etc.</string>
    <string name="pref_downloader_external">Almacenamiento externo del usuario</string>
    <string name="pref_downloader_active_title">Descarga activa</string>
    <string name="pref_downloader_active_summary">Número máximo de descargas activas</string>
    <string name="pref_dialog_to_apply_restart">Esta configuración se aplicará después de reiniciar la app</string>
    <string name="pref_app_download">Descargas</string>
    <string name="pref_abandon_session_desc">Limpiar las sesiones de instalación abandonadas o pendientes</string>
    <string name="pref_abandon_session">Forzar la limpieza de las sesiones de instalación</string>
    <string name="onboarding_permission_installer_desc">Permitir la instalación de aplicaciones desde Aurora Store</string>
    <string name="onboarding_permission_installer">Permiso del instalador</string>
    <string name="onboarding_permission_esm_desc">Requerido en los dispositivos que ejecutan Android R+, adicional al acceso al almacenamiento externo</string>
    <string name="onboarding_permission_esm">Gestor de almacenamiento externo</string>
    <string name="onboarding_permission_esa_desc">Para guardar descargas (APKs y OBBs), exportar e importar configuraciones de dispositivos en el almacenamiento externo.</string>
    <string name="onboarding_permission_esa">Acceso al almacenamiento externo</string>
    <string name="onboarding_welcome_select">¿Cómo le va\?</string>
    <string name="onboarding_tos_error">Primero hay que marcar los TDS como leídos.</string>
    <string name="onboarding_tos_confirmation">He leído las condiciones de servicio de Aurora Store.</string>
    <string name="onboarding_tos_desc">Por favor, lea nuestras condiciones de servicio y acéptelas para utilizar Aurora Store.</string>
    <string name="onboarding_tos">Términos del servicio</string>
    <string name="onboarding_title_welcome">Bienvenido/a</string>
    <string name="onboarding_title_theme">Temas</string>
    <string name="onboarding_title_permissions">Permisos</string>
    <string name="onboarding_title_installer">Instalador</string>
    <string name="onboarding_title_accent">Acento</string>
    <string name="onboarding_theme_select">Selecciona el que le guste</string>
    <string name="onboarding_permission_select">Aurora Store requiere los siguientes permisos</string>
    <string name="onboarding_installer_select">Seleccione un instalador adecuado</string>
    <string name="notification_installation_auto">Pulse para instalar</string>
    <string name="notification_channel_general">Notificación general</string>
    <string name="notification_channel_alert">Notificación rápida</string>
    <string name="list_update_all_txt_one">actualización disponible</string>
    <string name="dialog_desc_self_update">¿Desea actualizar ahora\?</string>
    <string name="dialog_title_self_update">Nueva actualización disponible</string>
    <string name="device_miui_extra">Opcionalmente puede elegir el instalador nativo, pero entonces no podrá instalar los APKs empaquetados (divididos), así que la elección es suya.</string>
    <string name="device_miui_description">Por favor, desactive las optimizaciones de MIUI para permitir las instalaciones, de lo contrario puede elegir el instalador de root o de los servicios.</string>
    <string name="device_miui_subtitle">El instalador de sesión no puede instalar aplicaciones debido a las optimizaciones de MIUI.</string>
    <string name="device_miui_title">¡MIUI detectado!</string>
    <string name="device_huawei_description">Le sugerimos que utilice la simulación de dispositivo en caso de que tenga un dispositivo Huawei reciente. ¿Desea aplicar la simulación ahora\?</string>
    <string name="device_huawei_subtitle">Parece que utiliza un dispositivo Huawei, debido a las recientes prohibiciones de Google es posible que no pueda iniciar sesión.</string>
    <string name="device_huawei_title">¡Huawei detectado!</string>
    <string name="menu_terms">Términos del servicio</string>
    <string name="menu_license">Licencia</string>
    <string name="menu_disclaimer">Advertencia</string>
    <string name="installer_status_user_action">Esperando la confirmación del usuario</string>
    <string name="installer_status_unknown">Desconocido</string>
    <string name="installer_status_success">Instalado con éxito</string>
    <string name="installer_status_failure_storage">Espacio de memoria insuficiente</string>
    <string name="installer_status_failure_invalid">APK inválido o corrupto</string>
    <string name="installer_status_failure_incompatible">App incompatible</string>
    <string name="installer_status_failure_conflict">Existe un paquete conflictivo</string>
    <string name="installer_status_failure_session">No se ha podido crear la sesión</string>
    <string name="installer_status_failure_blocked">La instalación se bloqueó</string>
    <string name="installer_status_failure_aborted">Instalación cancelada</string>
    <string name="installer_status_failure">El instalador falló</string>
    <string name="installer_service_misconfigured">Los servicios de Aurora no están configurados. Asegúrese de que el servicio está habilitado y todos los permisos están concedidos</string>
    <string name="installer_service_unavailable">Los servicios de Aurora no están instalados o la versión es incorrecta (requiere &gt;= 1.0.9), por favor instálela o cambie el instalador</string>
    <string name="installer_service_available">Los servicios de Aurora están disponibles y listos para ser instalados.</string>
    <string name="action_later">Más tarde</string>
    <string name="updater_title_n">%s now can update automatically!</string>
    <string name="updater_desc_n">Now this app can automatically update and has the last features. \n This feature can be desactived</string>
    <string name="updater_permis_wri">Write permission to download the apk automatically, keep the app updated</string>
    <string name="update_app">Update app</string>
    <string name="update_titla">%s has a new update!</string>
    <string name="install_upd">Install update</string>
    <string name="ask_">Ask before</string>
    <string name="backgro">Update in background</string>
    <string name="default_update_text">This version we made fixes and improvements in the app, keep the app updated!</string>
    <string name="deactive">Desactive</string>
    <string name="news">News</string>
</resources>