<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bup_round_top"
    android:padding="10dp"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/close_"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:padding="4dp"
        app:srcCompat="@drawable/close_ac"
        app:tint="@color/back_inb" />

    <ImageView
        android:id="@+id/ic_app"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/update_titla"
        android:textAlignment="center"
        android:textColor="@color/back_inb"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/updater_desc_n"
        android:textAlignment="center"
        android:textColor="@color/back_inb"
        android:textSize="12sp"
        android:textStyle="normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/btn_late"
            app:cardCornerRadius="5dp"
            android:layout_alignParentStart="true"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/red_"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/action_later"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/btn_giveper"
            app:cardCornerRadius="5dp"
            android:layout_alignParentEnd="true"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/back_inb"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/back_b_s"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/update_app"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</LinearLayout>