<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bup_round_top"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/close_"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="4dp"
        android:padding="4dp"
        app:srcCompat="@drawable/close_ac"
        app:tint="@color/back_inb" />

    <ImageView
        android:id="@+id/ic_app"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/title_perm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/updater_title_n"
        android:textAlignment="center"
        android:textColor="@color/back_inb"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/desc_perm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/updater_desc_n"
        android:textAlignment="center"
        android:textColor="@color/back_inb"
        android:textSize="12sp"
        android:textStyle="normal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/back_inb"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/permissionNow"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/updater_permis_wri"
        />

    <com.kofigyan.stateprogressbar.StateProgressBar
        android:id="@+id/your_state_progress_bar_id"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:spb_stateBackgroundColor="#BDBDBD"
        android:layout_gravity="center"
        app:spb_stateForegroundColor="@color/acctp"
        app:spb_stateNumberBackgroundColor="#808080"
        app:spb_stateNumberForegroundColor="#eeeeee"
        app:spb_currentStateDescriptionColor="@color/acctp"
        app:spb_stateDescriptionColor="#808080"
        app:spb_animateToCurrentProgressState="true"
        app:spb_checkStateCompleted="true"/>

<LinearLayout
android:id="@+id/types"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:id="@+id/ask_btn"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/acctp"
        app:cardUseCompatPadding="true"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        app:cardElevation="4dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ask_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/ask_"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/background_btn"
        android:layout_width="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_gravity="center_horizontal"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        android:layout_height="wrap_content">

        <TextView
android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blk"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/backgro"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            />

    </androidx.cardview.widget.CardView>


</LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relay_btm"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/btn_deactive"
            app:cardCornerRadius="5dp"
          android:layout_alignParentStart="true"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="10dp"
            app:cardElevation="8dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/red_"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/deactive"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/btn_giveper"
            app:cardCornerRadius="5dp"
           android:layout_alignParentEnd="true"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="10dp"
            app:cardElevation="8dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/back_inb"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/back_b_s"
                android:id="@+id/text_btn"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/give_prmms"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>




</LinearLayout>