<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updater.CheckUActivity">

    <RelativeLayout
        android:background="@color/back_b_s"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="4dp"
            android:id="@+id/back_"
            app:tint="@color/back_inb"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/close_ac"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_above="@id/install_now"
            android:layout_height="match_parent">



        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"
            />


        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/back_inb"
            android:text="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/back_inb"
                android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:orientation="horizontal"

                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="12dp"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/acac"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:id="@+id/txt_version_ttl"
                    android:textColor="@color/back_b_s"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/news"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="normal"
                android:id="@+id/text_updates"
                android:textSize="14sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/back_inb"
                android:layout_gravity="start"
                android:text="@string/default_update_text"
                android:layout_height="wrap_content"/>





        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/install_now"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/back_inb"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/install_upd"
                android:id="@+id/btn_txt"
                android:textColor="@color/back_b_s"
                android:textSize="23sp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_loading"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading_th.json"
                app:lottie_loop="true" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>